# pacman

./: .cvsignore  .editorconfig  .gitattributes  .gitignore  .gitlab-ci.yml  .mailmap  AUTHORS  ChangeLog  HACKING  INSTALL  Makefile.am  NEWS  PKGBUILD-split.proto  PKGBUILD.proto  README  RELEASE  TODO  TODO.aaron  TODO.autoconf  TODO.dan  TRANSLATORS  acinclude.m4  autoclean.sh  autogen.sh  config.guess  config.h  configure.ac  configure.in  devkitpacman-build-notes.txt  ltmain.sh  meson.build  meson_options.txt  proto.install  submitting-patches  translation-help  valgrind.supp
contrib/: .gitignore  Makefile.am  PKGBUILD.proto  PKGBUILD.vim  README  bacman  bacman.in  bacman.sh.in  bash_completion  bash_completion.in  checkupdates.sh.in  gensync  paccache.in  paccache.sh.in  pacdiff  pacdiff.in  pacdiff.sh.in  paclist  paclist.in  paclist.sh.in  paclog-pkglist  paclog-pkglist.in  paclog-pkglist.sh.in  pacscripts  pacscripts.in  pacscripts.sh.in  pacsearch  pacsearch.in  pacsysclean.in  pacsysclean.sh.in  pactree  pactree.in  proto.install  rankmirrors.sh.in  re-pacman  updatesync  updpkgsums.sh.in  verify-pacman-repo-db.pl  vimproject  vimprojects.in  (+4 more)
contrib/doc/: .gitignore  Makefile.am  asciidoc.conf  bacman.8.txt  footer.txt  verify-pacman-repo-db.1.txt
doc/: .cvsignore  .gitignore  BUILDINFO.5.asciidoc  BUILDINFO.5.txt  Doxyfile  Doxyfile.in  Makefile.am  PKGBUILD-example.txt  PKGBUILD.5  PKGBUILD.5.asciidoc  PKGBUILD.5.txt  PKGBUILD.8  addendum.8.hu  alpm-hooks.5.asciidoc  alpm-hooks.5.txt  asciidoc.conf  footer.asciidoc  footer.txt  index.asciidoc  index.txt  libalpm.3  libalpm.3.asciidoc  libalpm.3.in  libalpm.3.txt  makepkg-template.1.asciidoc  makepkg-template.1.txt  makepkg.8  makepkg.8.asciidoc  makepkg.8.in  makepkg.8.txt  makepkg.conf.5  makepkg.conf.5.asciidoc  makepkg.conf.5.txt  meson.build  pacman-conf.8.asciidoc  pacman-db-upgrade.8.asciidoc  pacman-key.8.asciidoc  pacman-key.8.txt  pacman.8  pacman.8.asciidoc  (+17 more)
doc/hu/: Makefile.am
doc/man3/: alpm_conflict_getinfo.3  alpm_databases.3  alpm_db_update.3  alpm_dep.3  alpm_get_md5sum.3  alpm_get_option.3  alpm_groups.3  alpm_grp_getinfo.3  alpm_initialize.3  alpm_interface.3  alpm_list.3  alpm_list_first.3  alpm_log.3  alpm_logaction.3  alpm_misc.3  alpm_options.3  alpm_packages.3  alpm_pkg_checkmd5sum.3  alpm_sync.3  alpm_sync_getinfo.3  alpm_trans.3  alpm_trans_getinfo.3
doc/po/: hu.po  pacman.pot
etc/: .gitignore  Makefile.am  Makefile.in  makepkg.conf  makepkg.conf.in  pacman.conf  pacman.conf.in
etc/abs/: Makefile.am  abs.conf  supfile.arch  supfile.community  supfile.core  supfile.extra  supfile.testing  supfile.unstable
etc/makepkg.conf.d/: fortran.conf.in  rust.conf.in
etc/pacman.d/: .cvsignore  .gitignore  Makefile  Makefile.am  Makefile.in  community  current  extra  gen-mirrorlist.sh  mirrorlist.in  release  unstable
lib/libalpm/: Doxyfile  Makefile  Makefile.am  add.c  add.h  alpm.c  alpm.h  alpm_list.c  alpm_list.h  backup.c  backup.h  base64.c  base64.h  be_files.c  be_local.c  be_package.c  be_sync.c  cache.c  cache.h  conflict.c  conflict.h  db.c  db.h  delta.c  delta.h  deps.c  deps.h  diskspace.c  diskspace.h  dload.c  dload.h  error.c  error.h  filelist.c  filelist.h  graph.c  graph.h  group.c  group.h  handle.c  (+52 more)
lib/libalpm/po/: .cvsignore  LINGUAS  Makefile  Makefile.in.in  Makevars  POTFILES  POTFILES.in  ar.po  ast.po  az_AZ.po  bg.po  br.po  ca.po  cs.po  cs_CZ.po  da.po  de.gmo  de.po  el.po  en_GB.po  eo.po  es.po  es_419.po  eu.po  eu_ES.po  fa.po  fi.po  fr.gmo  fr.po  gl.po  hi.po  hr.po  hu.gmo  hu.po  id.po  is.po  it.po  ja.po  ka.po  kk.po  (+28 more)
lib/libftp/: Makefile  Makefile.am  ftplib.c  ftplib.h
scripts/: .gitignore  Makefile.am  abs  abs.in  abs.sh.in  aurbuild  gensync  gensync.in  gensync.sh.in  libmakepkg.pc.in  makepkg  makepkg-template.pl.in  makepkg-wrapper.sh.in  makepkg.in  makepkg.sh.in  makeworld  makeworld.in  makeworld.sh.in  meson.build  pacman-db-upgrade.sh.in  pacman-key.sh.in  pacman-optimize  pacman-optimize.in  pacman-optimize.sh.in  pkgdelta.sh.in  rankmirrors  rankmirrors.in  rankmirrors.py.in  rankmirrors.sh.in  re-pacman  repo-add  repo-add.in  repo-add.sh.in  repo-remove  repo-remove.in  repo-remove.sh.in  updatesync  updatesync.in  updatesync.sh.in  wrapper.sh.in
scripts/completion/: bash_completion.in  zsh_completion.in
scripts/libmakepkg/: .gitignore  autodep.sh.in  buildenv.sh.in  executable.sh.in  integrity.sh.in  lint_config.sh.in  lint_package.sh.in  lint_pkgbuild.sh.in  meson.build  reproducible.sh.in  source.sh.in  srcinfo.sh.in  tidy.sh.in  util.sh.in
scripts/libmakepkg/autodep/: library_depends.sh.in  library_provides.sh.in  meson.build
scripts/libmakepkg/buildenv/: buildflags.sh.in  compiler.sh.in  debugflags.sh.in  fortran.sh.in  lto.sh.in  makeflags.sh.in  meson.build  rust.sh.in
scripts/libmakepkg/executable/: ccache.sh.in  checksum.sh.in  debugedit.sh.in  (+9 more)
scripts/po/: LINGUAS  Makevars  POTFILES.in  ar.po  ast.po  az_AZ.po  bg.po  br.po  ca.po  cs.po  da.po  de.po  el.po  en_GB.po  eo.po  es.po  es_419.po  eu.po  eu_ES.po  fa.po  fi.po  fr.po  gl.po  hi.po  hr.po  hu.po  id.po  is.po  it.po  ja.po  ka.po  kk.po  ko.po  ko_KR.po  lt.po  meson.build  nb.po  nl.po  pacman-scripts.pot  pl.po  (+14 more)
src/pacman/: .gitignore  Makefile  Makefile.am  add.c  add.h  callback.c  callback.h  check.c  check.h  conf.c  conf.h  database.c  db.c  db.h  deptest.c  deptest.h  download.c  download.h  downloadprog.c  downloadprog.h  files.c  ini.c  ini.h  list.c  list.h  log.c  log.h  output.c  output.h  package.c  package.h  pacman-conf.c  pacman.c  pacman.h  query.c  query.h  remove.c  remove.h  sighandler.c  sighandler.h  (+8 more)
src/util/: .cvsignore  .gitignore  Makefile.am  cleanupdelta.c  convertdb.c  meson.build  pacsort.c  pactree.c  testdb.c  testpkg.c  vercmp.c
test/pacman/: ChangeLog  Makefile.am  README  meson.build  pactest.py  pmdb.py  pmenv.py  pmfile.py  pmpkg.py  pmrule.py  pmserve.py  pmtest.py  tap.py  util.py
test/scripts/: Makefile.am  human_to_size_test.sh  meson.build  pacman-db-upgrade-v9.py  parseopts_test.sh
(+568 files in other folders)
